[package]
name = "plonky2_sha512"
description = "Plonky2 implementation of SHA512"
authors = ["Utsav Jain <utsav@atomlabs.one>"]
keywords = ["snark", "plonky2", "sha512"]
categories = ["cryptography"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
