[package]
name = "plonky2_sha512"
description = "Plonky2 implementation of SHA512"
authors = ["Utsav Jain <utsav@atomlabs.one>"]
keywords = ["snark", "plonky2", "sha512"]
categories = ["cryptography"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = "0.1.4"
plonky2_crypto = {git = "https://github.com/Electron-Labs/plonky2-crypto"}
anyhow = "1.0.40"
rand = "0.8.5"
sha2 = "0.10"